src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: P0.25\nborder on\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 283 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 283 × 680, bounds: 1231 × 680, states: [Activated]
