src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-dhF500-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "default column width: P0.25\ndefault window height: F500\nborder on\nwant fullscreen: AN"
expression: snapshot
---
initial configure:
size: 292 × 500, bounds: 1240 × 680, states: []

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 292 × 500, bounds: 1240 × 680, states: [Activated]
